FIx wrong colors in input.css

--- a/packages/css/src/formElements/input/input.css
+++ b/packages/css/src/formElements/input/input.css
@@ -11,7 +11,7 @@
   border-radius: var(--md-size-4);
   border: var(--md-size-1) solid var(--md-color-border-primary);
   margin: var(--md-size-1);
-  color: var(--mdGreyColor);
+  color: var(--md-color-text-primary);
   font-size: var(--md-typography-size-16);
   line-height: 150%;
   box-sizing: border-box;
@@ -118,7 +118,7 @@
 }
 
 .md-input__prefix.md-input__prefix--disabled {
-  color: var(--mdGreyColor60);
+  color: var(--md-color-text-disabled);
 }
 
 .md-input__wrapper.md-input__wrapper--small .md-input__prefix {
